--- a/lsns/Cargo.toml
+++ b/lsns/Cargo.toml
@@ -12,10 +12,11 @@ version = "0.0.1"
 authors = ["Dongsu Park <dpark@posteo.net>"]
 
 [dependencies]
+nsutils = "0.0.1"
 argparse = "0.2.1"
 procinfo = "0.3.1"
-unshare = "0.1.14"
 text_io = "0.1.6"
+unshare = "0.1.14"
 
 [[bin]]
 name = "lsns"
