--- a/.travis.yml
+++ b/.travis.yml
@@ -9,5 +9,10 @@ os:
 notifications:
   email: false
 
+before_script:
+  - export PATH="$PATH:$HOME/.cargo/bin"
+  - which rustfmt || cargo install rustfmt
+
 script:
+  - cargo fmt -- --write-mode=diff
   - cargo build --verbose
